examples/test/testpolicy3805.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3805
  namespace: namespace491
spec:
  podSelector:
    matchLabels:
      key21: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value34
          key7: value13
      podSelector:
        matchLabels:
          key48: value31
          key7: value34
